constants to the top

--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1333,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1344,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,38 @@
       "GEOCODE_ADDRESS address: 7550 Kirby Dr\n",
       "Location returned by API for 7550 Kirby Dr, Texas, USA is 7550, Kirby Drive, Houston, Harris County, Texas, 77030, United States with coord (29.698493, -95.4182895)\n",
       "sending geocode address for: JJ Lee 6919 Main St, Houston, TX 77030\n",
-      "GEOCODE_ADDRESS address: 6919 Main St, Houston, TX 77030\n"
+      "GEOCODE_ADDRESS address: 6919 Main St, Houston, TX 77030\n",
+      "Location returned by API for 6919 Main St, Houston, TX 77030, Texas, USA is 6919, Main Street, Texas Medical Center, Houston, Harris County, Texas, 77030, United States with coord (29.7059138, -95.4052109)\n",
+      "sending geocode address for: Susanna Tang 1601 Rice Boulevard, Houston, TX 77005\n",
+      "GEOCODE_ADDRESS address: 1601 Rice Boulevard, Houston, TX 77005\n",
+      "Location returned by API for 1601 Rice Boulevard, Houston, TX 77005, Texas, USA is 1601, Rice Boulevard, Southampton, University Place, Houston, Harris County, Texas, 77005, United States with coord (29.717819, -95.410622)\n",
+      "sending geocode address for: david kim 1330 old spanish trl\n",
+      "GEOCODE_ADDRESS address: 1330 old spanish trl\n",
+      "Location returned by API for 1330 old spanish trl, Texas, USA is 1330, Old Spanish Trail, Houston, Harris County, Texas, 77054, United States with coord (29.6930288, -95.4125847)\n",
+      "sending geocode address for: Sam Ko 2422 Quenby St\n",
+      "GEOCODE_ADDRESS address: 2422 Quenby St\n",
+      "Location returned by API for 2422 Quenby St, Texas, USA is Quenby Street, Southampton, University Place, Houston, Harris County, Texas, 77005, United States with coord (29.7221156, -95.4094736)\n",
+      "sending geocode address for: Jeff Jiang 2422 Quenby St, 77005\n",
+      "GEOCODE_ADDRESS address: 2422 Quenby St, 77005\n",
+      "Location returned by API for 2422 Quenby St, 77005, Texas, USA is Quenby Street, Southampton, University Place, Houston, Harris County, Texas, 77005, United States with coord (29.7221156, -95.4094736)\n",
+      "sending geocode address for: Jane Yoo 1963 Dryden Rd\n",
+      "GEOCODE_ADDRESS address: 1963 Dryden Rd\n",
+      "Location returned by API for 1963 Dryden Rd, Texas, USA is 1963, Dryden Road, Southgate, University Place, Houston, Harris County, Texas, 77030, United States with coord (29.7114189, -95.4038915)\n",
+      "sending geocode address for: Jacob Deadlifts 2600 gramercy st\n",
+      "GEOCODE_ADDRESS address: 2600 gramercy st\n",
+      "Location returned by API for 2600 gramercy st, Texas, USA is 2600, Gramercy Street, Southgate, Braeswood, Houston, Harris County, Texas, 77030, United States with coord (29.70448, -95.418411)\n",
+      "sending geocode address for: Jacob Lei 1965 Dryden Road\n",
+      "GEOCODE_ADDRESS address: 1965 Dryden Road\n",
+      "Location returned by API for 1965 Dryden Road, Texas, USA is 1965, Dryden Road, Southgate, University Place, Houston, Harris County, Texas, 77030, United States with coord (29.7114346, -95.4039193)\n",
+      "sending geocode address for: Josh Paik 1963 dryden \n",
+      "GEOCODE_ADDRESS address: 1963 dryden \n",
+      "Location returned by API for 1963 dryden , Texas, USA is 1963, Dryden Road, Southgate, University Place, Houston, Harris County, Texas, 77030, United States with coord (29.7114189, -95.4038915)\n",
+      "sending geocode address for: Lia Kim 5353 Institute Lane\n",
+      "GEOCODE_ADDRESS address: 5353 Institute Lane\n",
+      "Location returned by API for 5353 Institute Lane, Texas, USA is 5353, Institute Lane, Jandor Garden, University Place, Houston, Harris County, Texas, 77005, United States with coord (29.7247882, -95.3970224)\n",
+      "\n",
+      "List of people with invalid addresses: []\n",
+      "{'2600 bellefontaine st': (29.703301, -95.418409), '6320 Main St, Houston, TX 77005': (29.7171081, -95.3993378), '2022 mcclendon st': (29.708786, -95.4059251), '2600 Gramercy Street': (29.70448, -95.418411), '3333 cummins st': (29.7352357, -95.4384344), '1965 Dryden Rd': (29.7114346, -95.4039193), '7550 Kirby Dr': (29.698493, -95.4182895), '6919 Main St, Houston, TX 77030': (29.7059138, -95.4052109), '1601 Rice Boulevard, Houston, TX 77005': (29.717819, -95.410622), '1330 old spanish trl': (29.6930288, -95.4125847), '2422 Quenby St': (29.7221156, -95.4094736), '2422 Quenby St, 77005': (29.7221156, -95.4094736), '1963 Dryden Rd': (29.7114189, -95.4038915), '2600 gramercy st': (29.70448, -95.418411), '1965 Dryden Road': (29.7114346, -95.4039193), '1963 dryden ': (29.7114189, -95.4038915), '5353 Institute Lane': (29.7247882, -95.3970224)}\n"
      ]
     }
    ],
@@ -627,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1346,
    "metadata": {},
    "outputs": [
     {
@@ -657,22 +688,22 @@
       "Assignments TO Church:\n",
       "\n",
       "Driver: Matthew Ahn (Life tower)\n",
-      "  - Aaron Long (Life tower)\n",
-      "  - Grace Park (Life tower)\n",
-      "  - chloe lim (Life tower)\n",
       "  - Nathanael Wang (Life tower)\n",
+      "  - Christina Ko (Life tower)\n",
+      "  - Sehyun Jung (Life tower)\n",
+      "  - Aaron Long (Life tower)\n",
       "\n",
       "Driver: Clay Murphy (Life tower)\n",
-      "  - JJ Lee (Life tower)\n",
-      "  - Christina Ko (Life tower)\n",
-      "  - Michael Dong  (Life tower)\n",
+      "  - Grace Park (Life tower)\n",
       "  - Phillip Seo (Life tower)\n",
+      "  - chloe lim (Life tower)\n",
+      "  - JJ Lee (Life tower)\n",
       "\n",
       "Driver: Ellie Jung (Life tower)\n",
-      "  - Sehyun Jung (Life tower)\n",
+      "  - Michael Dong  (Life tower)\n",
       "  - Faith Chen (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - claudia lin (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Jocelyn Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rebecca Lu (Off Campus (indicate location in the \"Additional Info\" section))\n",
@@ -685,50 +716,44 @@
       "\n",
       "Driver: Olivia Chang (Life tower)\n",
       "  - Jacob Lei (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Kyle Hwang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Brian Seo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Jiwang Lee (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Israel Haile (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Taeho Choe (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Israel Haile (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Oriana Tang (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: david kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Jiwang Lee (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Benjamin Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Kyle Hwang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Justin Zhang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Daniel Kim  (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Jonathan Mak (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Jocelyn Youn (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Jacob Deadlifts (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Daniel Kim  (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Sam Ko (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Jocelyn Youn (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Jeff Jiang (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Sam Ko (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "\n",
       "Assignments FROM Church:\n",
-      "\n",
-      "Driver: Clay Murphy (Life tower)\n",
-      "  - Nathanael Wang (Life tower)\n",
-      "  - chloe lim (Life tower)\n",
-      "  - Sehyun Jung (Life tower)\n",
-      "  - Christina Ko (Life tower)\n",
       "\n",
       "Driver: Matthew Ahn (Life tower)\n",
       "  - Grace Park (Life tower)\n",
@@ -736,47 +761,53 @@
       "  - Taeho Choe (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Kyle Hwang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
+      "Driver: Clay Murphy (Life tower)\n",
+      "  - chloe lim (Life tower)\n",
+      "  - Sehyun Jung (Life tower)\n",
+      "  - Christina Ko (Life tower)\n",
+      "  - Nathanael Wang (Life tower)\n",
+      "\n",
       "Driver: Jocelyn Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Phillip Seo (Life tower)\n",
-      "  - Michael Dong  (Life tower)\n",
       "  - Aaron Long (Life tower)\n",
+      "  - Michael Dong  (Life tower)\n",
       "  - Austin Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "\n",
       "Driver: Ellie Jung (Life tower)\n",
       "  - JJ Lee (Life tower)\n",
-      "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Daniel Kim  (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Olivia Chang (Life tower)\n",
-      "  - claudia lin (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Faith Chen (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - claudia lin (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: david kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rebecca Lu (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Josh Paik (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Jane Yoo (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Jacob Lei (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "\n",
-      "Driver: Brian Seo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "\n",
-      "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Jiwang Lee (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Israel Haile (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "\n",
+      "Driver: Brian Seo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "\n",
+      "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Jonathan Mak (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Benjamin Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
@@ -848,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1349,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1350,
    "metadata": {},
    "outputs": [
     {
