--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1332,
+   "execution_count": 1384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "This is where you specify the maximum amount of seats a driver will have for a week instead of the default 4.\n",
     "'''\n",
     "AMOUNT_SEATS_CHANGE = {\n",
-    "    \"Ellen Kang\": 6,\n",
+    "    \"Matthew Ahn\": 2,\n",
     "}\n",
     "\n",
     "'''\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1334,
+   "execution_count": 1386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1335,
+   "execution_count": 1387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1336,
+   "execution_count": 1388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1337,
+   "execution_count": 1389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1338,
+   "execution_count": 1390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1339,
+   "execution_count": 1391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1340,
+   "execution_count": 1392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1341,
+   "execution_count": 1393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1342,
+   "execution_count": 1394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1343,
+   "execution_count": 1395,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,8 @@
       "53                      NaN\n",
       "54                      NaN\n",
       "55                      NaN\n",
-      "Name: Additional Info, dtype: object\n"
+      "Name: Additional Info, dtype: object\n",
+      "---- Matthew Ahn\n"
      ]
     }
    ],
@@ -531,6 +532,7 @@
     "# Change the amount of seats a driver would have from the dictionary above.\n",
     "for d in drivers:\n",
     "    if d.name in AMOUNT_SEATS_CHANGE:\n",
+    "        print(\"----\", d.name)\n",
     "        d.amount_seats = AMOUNT_SEATS_CHANGE[d.name]\n",
     "\n",
     "# print(\"\\nList of all riders:\\n\")\n",
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1344,
+   "execution_count": 1396,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1345,
+   "execution_count": 1397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1346,
+   "execution_count": 1398,
    "metadata": {},
    "outputs": [
     {
@@ -688,22 +690,22 @@
       "Assignments TO Church:\n",
       "\n",
       "Driver: Matthew Ahn (Life tower)\n",
-      "  - Nathanael Wang (Life tower)\n",
-      "  - Christina Ko (Life tower)\n",
       "  - Sehyun Jung (Life tower)\n",
+      "  - Nathanael Wang (Life tower)\n",
+      "  - chloe lim (Life tower)\n",
       "  - Aaron Long (Life tower)\n",
       "\n",
       "Driver: Clay Murphy (Life tower)\n",
-      "  - Grace Park (Life tower)\n",
-      "  - Phillip Seo (Life tower)\n",
-      "  - chloe lim (Life tower)\n",
+      "  - Christina Ko (Life tower)\n",
       "  - JJ Lee (Life tower)\n",
+      "  - Michael Dong  (Life tower)\n",
+      "  - Phillip Seo (Life tower)\n",
       "\n",
       "Driver: Ellie Jung (Life tower)\n",
-      "  - Michael Dong  (Life tower)\n",
+      "  - Grace Park (Life tower)\n",
       "  - Faith Chen (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - claudia lin (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Jiwang Lee (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Jocelyn Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rebecca Lu (Off Campus (indicate location in the \"Additional Info\" section))\n",
@@ -716,44 +718,56 @@
       "\n",
       "Driver: Olivia Chang (Life tower)\n",
       "  - Jacob Lei (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Kyle Hwang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Brian Seo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Taeho Choe (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Israel Haile (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Oriana Tang (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: david kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Jiwang Lee (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Taeho Choe (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Benjamin Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Justin Zhang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Daniel Kim  (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Justin Zhang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Jocelyn Youn (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Jonathan Mak (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Jacob Deadlifts (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Jocelyn Youn (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Jeff Jiang (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Sam Ko (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "\n",
       "Assignments FROM Church:\n",
+      "\n",
+      "Driver: Clay Murphy (Life tower)\n",
+      "  - chloe lim (Life tower)\n",
+      "  - JJ Lee (Life tower)\n",
+      "  - Sehyun Jung (Life tower)\n",
+      "  - Nathanael Wang (Life tower)\n",
+      "\n",
+      "Driver: Jocelyn Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Phillip Seo (Life tower)\n",
+      "  - Michael Dong  (Life tower)\n",
+      "  - Aaron Long (Life tower)\n",
+      "  - Austin Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "\n",
       "Driver: Matthew Ahn (Life tower)\n",
       "  - Grace Park (Life tower)\n",
@@ -761,35 +775,23 @@
       "  - Taeho Choe (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Kyle Hwang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
-      "Driver: Clay Murphy (Life tower)\n",
-      "  - chloe lim (Life tower)\n",
-      "  - Sehyun Jung (Life tower)\n",
-      "  - Christina Ko (Life tower)\n",
-      "  - Nathanael Wang (Life tower)\n",
-      "\n",
-      "Driver: Jocelyn Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Phillip Seo (Life tower)\n",
-      "  - Aaron Long (Life tower)\n",
-      "  - Michael Dong  (Life tower)\n",
-      "  - Austin Lee (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "\n",
       "Driver: Ellie Jung (Life tower)\n",
-      "  - JJ Lee (Life tower)\n",
+      "  - Christina Ko (Life tower)\n",
+      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Daniel Kim  (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Olivia Chang (Life tower)\n",
-      "  - Faith Chen (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - claudia lin (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Faith Chen (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Samuel Wen (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: david kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Rebecca Lu (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Logan Golia (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Sabrina Sun (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Josh Yang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
-      "  - Daniel Song (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Susanna Tang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "\n",
       "Driver: Josh Paik (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Jane Yoo (Off Campus (indicate location in the \"Additional Info\" section))\n",
@@ -798,21 +800,21 @@
       "  - Israel Haile (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Brian Seo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Derek Liang  (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Hannah Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "\n",
-      "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
-      "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "  - Joann Jung (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Daniel Kuo (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Grace Kwon (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Jonathan Mak (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Benjamin Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
-      "  - Justin Zhang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
       "  - Jocelyn Youn (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "  - Justin Zhang (North (Brown, Duncan, Jones, Martel, McMurtry))\n",
+      "\n",
+      "Driver: Lia Kim (Off Campus (indicate location in the \"Additional Info\" section))\n",
+      "  - Jeffery Huang (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - David Zhu (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Claire Doh (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
+      "  - Rachel Kim (South (Baker, Hanszen, Lovett, Sid Richardson, Wiess, Will Rice))\n",
       "\n",
       "Driver: Oriana Tang (Off Campus (indicate location in the \"Additional Info\" section))\n",
       "  - Jeff Jiang (Off Campus (indicate location in the \"Additional Info\" section))\n"
@@ -879,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1347,
+   "execution_count": 1399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1348,
+   "execution_count": 1400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1349,
+   "execution_count": 1401,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
+   "execution_count": 1402,
    "metadata": {},
    "outputs": [
     {
