--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +204,8 @@
     "print(JSON_KEY_PATH)\n",
     "print(1)\n",
     "\n",
+    "# share to here:\n",
+    "# nlf-automate-rides-service-acc@nlf-automate-rides.iam.gserviceaccount.com  \\\n",
     "link_to_sheet = \"https://docs.google.com/spreadsheets/d/18Zz3i_OQ0jW9ZJsudlpHHXykMwbVr9PkzUzx1-MnRZE/edit?gid=1076432338#gid=1076432338\"\n",
     "sheet_name = \"Form Responses RESET\"\n",
     "\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,8 +515,8 @@
     "        return address_coords[address]\n",
     "    try:\n",
     "        # Avoid appending \"Texas\" if it's already in the address\n",
-    "        if \"texas\" not in address.lower():\n",
-    "            full_address = f\"{address}, Texas, USA\"\n",
+    "        if \"houston\" not in address.lower():\n",
+    "            full_address = f\"{address}, houston, USA\"\n",
     "        else:\n",
     "            full_address = f\"{address}, USA\"\n",
     "\n",
